--- a/chat-ui/index.html
+++ b/chat-ui/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <script type="module" src="/dist/my-lit-button.js"></script>
-  </head>
-  <body>
-    <my-button label="Say Hello"></my-button>
-    <script>
-      document.querySelector('my-button').addEventListener('my-click', () => {
-        alert('Button clicked!');
-      });
-    </script>
-  </body>
+<html>
+<head>
+</head>
+<style>
+    html,body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+    }
+
+    .wrapper {
+        display: flex;
+        flex-direction: row;
+        flex: 1 1 0;
+        height: 100%;
+        width: 100%;
+        align-items: stretch;
+        justify-content: flex-end;
+    }
+</style>
+<body>
+    <div class="wrapper">
+        <gaia-chat profile-id="%VITE_PROFILE_ID%" base-url="%VITE_API_URL%" team-id="%VITE_TEAM_ID%"></gaia-chat>
+    </div>
+    <script type="module" src="src/index.ts"></script>
+</body>
 </html>
